--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,3 +21,17 @@
  .no-padding {
     padding: 0 !important;
  }
+
+ .left-padding {
+   padding-left: 15px !important;
+ }
+
+ .logout {
+   padding-left: 0;
+ }
+
+ .user-name {
+   padding-top: 15px;
+ }
+
+ 
