--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,1 @@
-<h1>Welcome</h1>
-
-<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<h1>Welcome to the Homepage of the Finance Tracker App!</h1>
