--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -9,7 +9,8 @@
             </div>
             <div class="col-md-2">
                 <%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
-                    <svg height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><circle cx="8.5" cy="8.5" r="5"/><path d="m17.571 17.5-5.571-5.5"/></g></svg> Look up a Stock
+                    <%= fa_icon 'search' %>
+                    Look up a Stock
                 <% end %>
             </div>
         </div>
